...
	<string name="timemachine">Time machine</string>
	<string name="time">Time</string>
	<string name="done">Done</string>
	<string name="saved">Saved</string>
	<string name="menu_save_and_add">Save and add note</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_deletelist">Delete list</string>
	<string name="menu_sync">Sync</string>
	<string name="menu_share">Share</string>
	<string name="menu_preferences">Settings</string>
	<string name="menu_createlist">Start new list</string>
	<string name="menu_clearcompleted">Clear completed</string>
	<string name="menu_setdefaultlist">Set as default list</string>
	<string name="new_default_set">New default set</string>
	<string name="menu_managelists">Edit lists</string>
	<string name="add_item">Add item</string>
	<string name="delete_question">Delete?</string>
	<string name="delete_items_message">Delete these items?</string>
...
	<string name="permission_read_desc">Allows the app to read your notes and related lists in No Nonsense Notes</string>
	<string name="permission_write_label">modify notes and lists</string>
	<string name="permission_write_desc">Allows the app to insert, update and delete notes and lists in No Nonsense Notes</string>
	<string name="settings_list_dialog">Select a list</string>
	<string name="settings_list">List</string>
	<string name="drag_to_timetravel">Drag to time travel</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="import_data_question">Import data?</string>
	<string name="import_started">Importing data…</string>
	<string name="imported_result">Imported %1$d notes into %2$d lists</string>
	<string name="import_error">Something went wrong: %s</string>

...
	<string name="notification_channel_name">Reminders for notes</string>
	<string name="notification_channel_description">Shows the note content at the time of the chosen reminder</string>
	<string name="feature_is_WIP">This feature is a W.I.P.</string>
	<string name="permission_denied">Can not proceed: you denied the permission</string>
	<string name="no_sync_method_chosen">You did not choose a sync method</string>
	<string name="file_picker_not_available">The file picker is not available</string>
	<string name="choose_backup_folder">Choose a backup folder</string>
	<string name="use_exact_alarms">Use exact alarms</string>
	<string name="exact_alarms_summary">Uses more battery to show notification reminders in a more reliable way</string>
	<string name="disable_battery_optimizations">Turn off battery optimizations</string>
	<string name="battery_optimizations_active">Battery optimizations on</string>
	<string name="battery_optimizations_inactive">Battery optimizations off</string>
	<string name="allow_exact_reminders">Allow exact reminders</string>
...
	<string name="small">Small</string>
	<string name="medium">Medium</string>
	<string name="large">Large</string>
	<string name="text_size">Text size</string>
	<string name="text">Text</string>
	<string name="add_a_reminder">Add a reminder</string>
	<string name="backup">Backup</string>
	<string name="backup_import">Import backup</string>
	<string name="backup_export">Export backup</string>
	<string name="backup_import_msg">Try to import backup from %1$s? This will clear the current database.</string>
	<string name="backup_export_msg">Export all notes to %1$s?</string>
	<string name="backup_import_success">Backup imported</string>
	<string name="backup_file_not_found">Could not find a backup file named NoNonsenseNotes_Backup.json</string>
	<string name="backup_import_failed">Could not read the backup file NoNonsenseNotes_Backup.json</string>
	<string name="backup_export_success">Backup exported</string>
...
