...
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/line_background" />
    <Button
        android:id="@+id/done_button"
        android:background="@drawable/done_background_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/done_label"
        android:textSize="@dimen/done_label_size"
...
