...
						android:id="@+id/taskCompleted"
						android:layout_width="wrap_content"
						android:layout_height="48dp"
						android:layout_centerInParent="true"
						android:gravity="center"
						android:nextFocusRight="@+id/dueDateBox"
						android:nextFocusDown="@+id/notificationAdd"/>
				</com.nononsenseapps.ui.DelegateFrame>

				<ImageButton
					android:id="@+id/dueCancelButton"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="wrap_content"
...
